[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Juan Gaitan <juans.gaitan@gmail.com>"]
packages = [
    { include = "smtp_verifier" },
    { include = "slowloris" },
    { include = "entropy" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
smtp_verifier = "smtp_verifier.cli:main"
slowloris = "slowloris.cli:main"
entropy = "entropy.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
